--- a/ProjectRPA/pom.xml
+++ b/ProjectRPA/pom.xml
@@ -18,7 +18,19 @@
 	</properties>
 	<dependencies>
 		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.3</version>
+        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.12.3</version>
+        </dependency>
 		
 		<!-- 이미지 업로드 형식 -->
 		<dependency>
@@ -31,10 +43,11 @@
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<!-- json 변환 -->
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.0</version>
 		</dependency>
+
 
 		<!-- commons-fileupload -->
 		<!-- multipart등을 사용할수 있음 -->
