--- a/ProjectRPA/pom.xml
+++ b/ProjectRPA/pom.xml
@@ -202,12 +202,20 @@
 		</dependency>
 
 		<!-- Servlet -->
-		<dependency>
+		<!-- 서블릿 버전 변경 : MockUp테스트 하기위해서. -->
+		<!-- <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
