--- a/ProjectRPA/pom.xml
+++ b/ProjectRPA/pom.xml
@@ -235,6 +235,14 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- thumbnail : 썸네일-->
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+		    <groupId>net.coobird</groupId>
+		    <artifactId>thumbnailator</artifactId>
+		    <version>0.4.13</version>
+		</dependency>	
 	</dependencies>
 	<build>
 		<plugins>
