--- a/ProjectRPA/pom.xml
+++ b/ProjectRPA/pom.xml
@@ -276,6 +276,23 @@
 		<version>2.3.2</version>
 	</dependency>
 	
+	<!-- JavaMail API : 회원가입시 인증메일 보내려고 -->
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4.7</version>
+	</dependency>
+	
+	<!-- Spring Context Support : 인증메일 보내려고 -->
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context-support</artifactId>
+		<version>${org.springframework-version}</version>
+	</dependency>
+	
+	
    </dependencies>
    <build>
       <plugins>
